syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ot2";
option java_outer_classname = "PixKeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.ot2;

service RegisterPixKey {
  rpc registerPixKey (RegisterPixKeyRequest) returns (RegisterPixKeyResponse) {}
}

service RemovePixKey  {
  rpc removePixKey (RemovePixKeyRequest) returns (RemovePixKeyResponse) {}
}

enum KeyType{
  UNKNOWN_KEY_TYPE = 0; //It is a good practice that the first element is a unknown type because protobuf assign the first element if it is not informed.
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum AccountType{
  UNKNOWN_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegisterPixKeyRequest {
  string clientId = 1;
  KeyType keyType = 2;
  string pixKey = 3;
  AccountType accountType = 4;
}

message RegisterPixKeyResponse {
  string clientId = 1;
  string pixKeyId = 2;
}

message RemovePixKeyRequest {
  string pixId = 1;
  string clientId = 2;
}

message RemovePixKeyResponse {
  string pixId = 1;
  string clientId = 2;
}